<resources>
    <string name="app_name">StoryApp</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Selamat datang di StoryApp! Jelajahi berbagai cerita menarik, bagikan momen Anda, dan temukan inspirasi dari pengguna lain di seluruh dunia</string>
    <string name="title_welcome_page">Selamat datang di StoryApp!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk membagikan cerita pengalaman?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat datang di StoryApp.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="invalid_email">Masukkan email dengan benar</string>
    <string name="empty_name">Nama tidak boleh kosong</string>
    <string name="name_too_short">Nama harus terdiri dari minimal 3 karakter</string>
    <string name="minimum_characters">Kata sandi harus minimal 8 karakter</string>
    <string name="yeah">Alhamdulillah</string>
    <string name="account_created_message">Akun dengan %1$s sudah berhasil dibuat. Yuk, login dan upload cerita pengalaman kamu…</string>
    <string name="next">Lanjut</string>
    <string name="account_failed_message">Pendaftaran akun gagal, mohon dicoba lagi dengan benar</string>
    <string name="input_your_name">Masukkan nama Anda</string>
    <string name="input_your_email">Masukkan email Anda</string>
    <string name="input_your_password">Masukkan kata sandi Anda</string>
    <string name="login_success">Anda berhasil masuk %1$s. Tidak sabar untuk mengupload cerita, ya?</string>
    <string name="image_story">Gambar</string>
    <string name="add_story">Tambah Cerita</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="description">Masukkan deskripsi cerita</string>
    <string name="upload">Unggah</string>
    <string name="upload_not_valid">Upload cerita tidak valid</string>
    <string name="upload_success">Anda berhasil mengunggah cerita. Semoga Anda senang ya!</string>
    <string name="upload_failed">Upload gagal</string>
    <string name="appwidget_text">CONTOH</string>
    <string name="add_widget">Tambah widget</string>
    <string name="app_widget_description">Ini adalah deskripsi widget aplikasi</string>
    <string name="widget_error">Kesalahan widget, data tidak ditemukan</string>
    <string name="upload_story">Unggah Cerita</string>
    <string name="logout_confirmation">Apakah Anda yakin ingin keluar?</string>
    <string name="exit">Keluar dari aplikasi</string>
    <string name="detail_story">Detail Story</string>
    <string name="error_message">Detail tidak ada</string>
    <string name="ok">Ok</string>
    <string name="form">Isi Form Terlebih Dahulu</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="confirmation_upload">Apakah kamu tidak ingin melanjutkan berbagi pengalaman?</string>
    <string name="title_activity_maps">Eksplorasi Peta</string>
    <string name="normal_type">Tipe Normal</string>
    <string name="satelite_type">Tipe Satelit</string>
    <string name="terrain_type">Tipe Medan</string>
    <string name="hybrid_type">Tipe Hibrid</string>
    <string name="maps">Peta</string>
    <string name="use_current_location">Tambahkan lokasi Anda saat ini?</string>
    <string name="location_not_found">Lokasi tidak ditemukan</string>
    <string name="retry">Coba lagi</string>
</resources>
